# stackwar

./: .gitignore  README.md  languages.yaml  mypy.ini  pyproject.toml
stackwar/: __init__.py  languages.py  renderhtml.py  surveyutils.py
stackwar/cli/: battle.py  download.py  squash.py  utils.py
